Bug horizontal scroll is to much high

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@ body {
     position: relative;
     color: white;
     font-family: 'Satoshi', sans-serif;
-    width: 100vw;
 }
 
 .App {
